--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,80 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.2
-aiosignal==1.4.0
-attrs==25.4.0
-beautifulsoup4==4.14.2
-certifi==2025.11.12
-charset-normalizer==3.4.4
+aiohttp==3.9.5
+aiosignal==1.3.1
+anyio==4.4.0
+attrs==23.2.0
+av==13.1.0
+beautifulsoup4==4.13.4
+cachetools==5.3.3
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.2.1
+cloup==3.0.8
 colorama==0.4.6
-decorator==5.2.1
-frozenlist==1.8.0
-idna==3.11
-multidict==6.7.0
+decorator==5.1.1
+frozenlist==1.4.1
+glcontext==3.0.0
+google-api-core==2.18.0
+google-api-python-client==2.127.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google_search_results==2.4.2
+googleapis-common-protos==1.63.0
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.0
+hyperframe==6.0.1
+idna==3.7
+isosurfaces==0.1.2
+manim==0.19.0
+ManimPango==0.6.0
+mapbox_earcut==1.0.3
+markdown-it-py==4.0.0
+mdurl==0.1.2
+moderngl==5.12.0
+moderngl-window==3.1.1
+multidict==6.0.5
+networkx==3.5
+numpy==2.3.2
+obsws-python==1.7.0
 openai==0.28.1
-propcache==0.4.1
+pillow==10.3.0
+proto-plus==1.23.0
+protobuf==4.25.3
 py==1.11.0
-python-dotenv==1.2.1
-requests==2.32.5
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycairo==1.28.0
+pycparser==2.22
+pydub==0.25.1
+pyglet==2.1.8
+pyglm==2.8.2
+Pygments==2.19.2
+pyparsing==3.1.2
+pytchat==0.5.5
+python-dotenv==1.0.1
+pytube==15.0.0
+pyxel==2.3.6
+requests==2.31.0
 retry==0.9.2
-soupsieve==2.8
-tqdm==4.67.1
-typing_extensions==4.15.0
-urllib3==2.5.0
-yarl==1.22.0
+rich==14.1.0
+rsa==4.9
+scipy==1.16.1
+screeninfo==0.8.1
+skia-pathops==0.8.0.post2
+sniffio==1.3.1
+sounddevice==0.4.7
+soundfile==0.12.1
+soupsieve==2.7
+srt==3.5.3
+svgelements==1.9.6
+tqdm==4.66.2
+typing_extensions==4.14.1
+uritemplate==4.1.1
+urllib3==2.2.1
+watchdog==6.0.0
+websocket-client==1.8.0
+yarl==1.9.4
